k8s/apps/hubble/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-rajsingh-info-tls
  namespace: external-name
  annotations:
    cert-manager.io/cluster-issuer: rajsingh-info-global-issuer
    kubernetes.io/tls-acme: 'true'
    item.homer.rajsingh.info/Logo: https://avatars.githubusercontent.com/u/21054566?s=280&v=4
    item.homer.rajsingh.info/Name: "Hubble"
spec:
  ingressClassName: haproxy
  rules:
  - host: hubble.rajsingh.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hubble-ui
            port:
              number: 80
  tls:
  - secretName: hubble-rajsingh-info-tls
    hosts:
    - hubble.rajsingh.info
